# stock-investment

./: .gitignore  README.md  batch_save_summary.json  mcp_server_config.md  pyproject.toml
memory-bank/: activeContext.md  database_er_diagram.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
tools/: batch_save_analysis_data.py  generate_all_reports.py  generate_long_term_reports.py  generate_report_index.py  generate_stock_reports.py  import_stock_price_history.py  sqlalchemy_import_stocks.py  update_portfolio_prices_sqlalchemy.py
tools/report_generator/: analyzer.py  data_fetcher.py  database_manager.py  index_template.html  long_term_analyzer.py  long_term_investment_template.html  long_term_template.html  models.py  template.html  visualizer.py
