[project]
name = "stock-investment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "jinja2>=3.1.6",
    "matplotlib>=3.10.6",
    "mplfinance>=0.12.10b0",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "sqlalchemy>=2.0.44",
    "xlrd>=2.0.2",
    "yfinance>=0.2.65",
]
